--- a/PPMToolFS/src/main/resources/application.properties
+++ b/PPMToolFS/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ppmt?createDatabaseIfNotExist=true
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
